src/antlrGenerated/COOLParser.js
// Generated from ./src/COOL.g4 by ANTLR 4.7
// jshint ignore: start
var antlr4 = require('antlr4/index');
var COOLListener = require('./COOLListener').COOLListener;
var COOLVisitor = require('./COOLVisitor').COOLVisitor;

var grammarFileName = "COOL.g4";



var atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

var decisionsToDFA = atn.decisionToState.map( function(ds, index) { return new antlr4.dfa.DFA(ds, index); });

var sharedContextCache = new antlr4.PredictionContextCache();

var literalNames = [ null, "';'", "'{'", "'}'", "'('", "','", "')'", "':'", 
                     "'@'", "'.'", null, "'(*'", "'*)'", null, null, null, 
                     null, null, null, null, null, null, null, null, null, 
                     null, null, null, null, null, null, null, null, null, 
                     null, null, null, null, "'<-'", "'=>'", "'+'", "'-'", 
                     "'*'", "'/'", "'<'", "'<='", "'='", "'~'" ];

var symbolicNames = [ null, null, null, null, null, null, null, null, null, 
                      null, "WHITESPACE", "OPEN_COMMENT", "CLOSE_COMMENT", 
                      "COMMENT", "ONE_LINE_COMMENT", "CLASS", "ELSE", "FALSE", 
                      "FI", "IF", "IN", "INHERITS", "ISVOID", "LET", "LOOP", 
                      "POOL", "THEN", "WHILE", "CASE", "ESAC", "NEW", "OF", 
                      "NOT", "TRUE", "STRING", "INT", "TYPEID", "OBJECTID", 
                      "ASSIGNMENT", "CASE_ARROW", "ADD", "MINUS", "MULTIPLY", 
                      "DIVISION", "LESS_THAN", "LESS_EQUAL", "EQUAL", "INTEGER_NEGATIVE" ];

var ruleNames =  [ "program", "programBlocks", "classDefine", "feature", 
                   "formal", "expression" ];

function COOLParser (input) {
	antlr4.Parser.call(this, input);
    this._interp = new antlr4.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
    this.ruleNames = ruleNames;
    this.literalNames = literalNames;
    this.symbolicNames = symbolicNames;
    return this;
}

COOLParser.prototype = Object.create(antlr4.Parser.prototype);
COOLParser.prototype.constructor = COOLParser;

Object.defineProperty(COOLParser.prototype, "atn", {
	get : function() {
		return atn;
	}
});

COOLParser.EOF = antlr4.Token.EOF;
COOLParser.T__0 = 1;
COOLParser.T__1 = 2;
COOLParser.T__2 = 3;
COOLParser.T__3 = 4;
COOLParser.T__4 = 5;
COOLParser.T__5 = 6;
COOLParser.T__6 = 7;
COOLParser.T__7 = 8;
COOLParser.T__8 = 9;
COOLParser.WHITESPACE = 10;
COOLParser.OPEN_COMMENT = 11;
COOLParser.CLOSE_COMMENT = 12;
COOLParser.COMMENT = 13;
COOLParser.ONE_LINE_COMMENT = 14;
COOLParser.CLASS = 15;
COOLParser.ELSE = 16;
COOLParser.FALSE = 17;
COOLParser.FI = 18;
COOLParser.IF = 19;
COOLParser.IN = 20;
COOLParser.INHERITS = 21;
COOLParser.ISVOID = 22;
COOLParser.LET = 23;
COOLParser.LOOP = 24;
COOLParser.POOL = 25;
COOLParser.THEN = 26;
COOLParser.WHILE = 27;
COOLParser.CASE = 28;
COOLParser.ESAC = 29;
COOLParser.NEW = 30;
COOLParser.OF = 31;
COOLParser.NOT = 32;
COOLParser.TRUE = 33;
COOLParser.STRING = 34;
COOLParser.INT = 35;
COOLParser.TYPEID = 36;
COOLParser.OBJECTID = 37;
COOLParser.ASSIGNMENT = 38;
COOLParser.CASE_ARROW = 39;
COOLParser.ADD = 40;
COOLParser.MINUS = 41;
COOLParser.MULTIPLY = 42;
COOLParser.DIVISION = 43;
COOLParser.LESS_THAN = 44;
COOLParser.LESS_EQUAL = 45;
COOLParser.EQUAL = 46;
COOLParser.INTEGER_NEGATIVE = 47;

COOLParser.RULE_program = 0;
COOLParser.RULE_programBlocks = 1;
COOLParser.RULE_classDefine = 2;
COOLParser.RULE_feature = 3;
COOLParser.RULE_formal = 4;
COOLParser.RULE_expression = 5;

function ProgramContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = COOLParser.RULE_program;
    return this;
}

ProgramContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
ProgramContext.prototype.constructor = ProgramContext;

ProgramContext.prototype.programBlocks = function() {
    return this.getTypedRuleContext(ProgramBlocksContext,0);
};

ProgramContext.prototype.enterRule = function(listener) {
    if(listener instanceof COOLListener ) {
        listener.enterProgram(this);
	}
};

ProgramContext.prototype.exitRule = function(listener) {
    if(listener instanceof COOLListener ) {
        listener.exitProgram(this);
	}
};

ProgramContext.prototype.accept = function(visitor) {
    if ( visitor instanceof COOLVisitor ) {
        return visitor.visitProgram(this);
    } else {
        return visitor.visitChildren(this);
    }
};




COOLParser.ProgramContext = ProgramContext;

COOLParser.prototype.program = function() {

    var localctx = new ProgramContext(this, this._ctx, this.state);
    this.enterRule(localctx, 0, COOLParser.RULE_program);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 12;
        this.programBlocks();
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function ProgramBlocksContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = COOLParser.RULE_programBlocks;
    return this;
}

ProgramBlocksContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
ProgramBlocksContext.prototype.constructor = ProgramBlocksContext;


 
ProgramBlocksContext.prototype.copyFrom = function(ctx) {
    antlr4.ParserRuleContext.prototype.copyFrom.call(this, ctx);
};


function ClassContext(parser, ctx) {
	ProgramBlocksContext.call(this, parser);
    ProgramBlocksContext.prototype.copyFrom.call(this, ctx);
    return this;
}

ClassContext.prototype = Object.create(ProgramBlocksContext.prototype);
ClassContext.prototype.constructor = ClassContext;

COOLParser.ClassContext = ClassContext;

ClassContext.prototype.classDefine = function() {
    return this.getTypedRuleContext(ClassDefineContext,0);
};

ClassContext.prototype.programBlocks = function() {
    return this.getTypedRuleContext(ProgramBlocksContext,0);
};
ClassContext.prototype.enterRule = function(listener) {
    if(listener instanceof COOLListener ) {
        listener.enterClass(this);
	}
};

ClassContext.prototype.exitRule = function(listener) {
    if(listener instanceof COOLListener ) {
        listener.exitClass(this);
	}
};

ClassContext.prototype.accept = function(visitor) {
    if ( visitor instanceof COOLVisitor ) {
        return visitor.visitClass(this);
    } else {
        return visitor.visitChildren(this);
    }
};


function EofContext(parser, ctx) {
	ProgramBlocksContext.call(this, parser);
    ProgramBlocksContext.prototype.copyFrom.call(this, ctx);
    return this;
}

EofContext.prototype = Object.create(ProgramBlocksContext.prototype);
EofContext.prototype.constructor = EofContext;

COOLParser.EofContext = EofContext;

EofContext.prototype.EOF = function() {
    return this.getToken(COOLParser.EOF, 0);
};
EofContext.prototype.enterRule = function(listener) {
    if(listener instanceof COOLListener ) {
        listener.enterEof(this);
	}
};

EofContext.prototype.exitRule = function(listener) {
    if(listener instanceof COOLListener ) {
        listener.exitEof(this);
	}
};

EofContext.prototype.accept = function(visitor) {
    if ( visitor instanceof COOLVisitor ) {
        return visitor.visitEof(this);
    } else {
        return visitor.visitChildren(this);
    }
};



COOLParser.ProgramBlocksContext = ProgramBlocksContext;

COOLParser.prototype.programBlocks = function() {

    var localctx = new ProgramBlocksContext(this, this._ctx, this.state);
    this.enterRule(localctx, 2, COOLParser.RULE_programBlocks);
    try {
        this.state = 19;
        this._errHandler.sync(this);
        switch(this._input.LA(1)) {
        case COOLParser.CLASS:
            localctx = new ClassContext(this, localctx);
            this.enterOuterAlt(localctx, 1);
            this.state = 14;
            this.classDefine();
            this.state = 15;
            this.match(COOLParser.T__0);
            this.state = 16;
            this.programBlocks();
            break;
        case COOLParser.EOF:
            localctx = new EofContext(this, localctx);
            this.enterOuterAlt(localctx, 2);
            this.state = 18;
            this.match(COOLParser.EOF);
            break;
        default:
            throw new antlr4.error.NoViableAltException(this);
        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function ClassDefineContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = COOLParser.RULE_classDefine;
    return this;
}

ClassDefineContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
ClassDefineContext.prototype.constructor = ClassDefineContext;

ClassDefineContext.prototype.CLASS = function() {
    return this.getToken(COOLParser.CLASS, 0);
};

ClassDefineContext.prototype.TYPEID = function(i) {
	if(i===undefined) {
		i = null;
	}
    if(i===null) {
        return this.getTokens(COOLParser.TYPEID);
    } else {
        return this.getToken(COOLParser.TYPEID, i);
    }
};


ClassDefineContext.prototype.INHERITS = function() {
    return this.getToken(COOLParser.INHERITS, 0);
};

ClassDefineContext.prototype.feature = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(FeatureContext);
    } else {
        return this.getTypedRuleContext(FeatureContext,i);
    }
};

ClassDefineContext.prototype.enterRule = function(listener) {
    if(listener instanceof COOLListener ) {
        listener.enterClassDefine(this);
	}
};

ClassDefineContext.prototype.exitRule = function(listener) {
    if(listener instanceof COOLListener ) {
        listener.exitClassDefine(this);
	}
};

ClassDefineContext.prototype.accept = function(visitor) {
    if ( visitor instanceof COOLVisitor ) {
        return visitor.visitClassDefine(this);
    } else {
        return visitor.visitChildren(this);
    }
};




COOLParser.ClassDefineContext = ClassDefineContext;

COOLParser.prototype.classDefine = function() {

    var localctx = new ClassDefineContext(this, this._ctx, this.state);
    this.enterRule(localctx, 4, COOLParser.RULE_classDefine);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 21;
        this.match(COOLParser.CLASS);
        this.state = 22;
        this.match(COOLParser.TYPEID);
        this.state = 25;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        if(_la===COOLParser.INHERITS) {
            this.state = 23;
            this.match(COOLParser.INHERITS);
            this.state = 24;
            this.match(COOLParser.TYPEID);
        }

        this.state = 27;
        this.match(COOLParser.T__1);
        this.state = 33;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        while(_la===COOLParser.OBJECTID) {
            this.state = 28;
            this.feature();
            this.state = 29;
            this.match(COOLParser.T__0);
            this.state = 35;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
        }
        this.state = 36;
        this.match(COOLParser.T__2);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function FeatureContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = COOLParser.RULE_feature;
    return this;
}

FeatureContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
FeatureContext.prototype.constructor = FeatureContext;


 
FeatureContext.prototype.copyFrom = function(ctx) {
    antlr4.ParserRuleContext.prototype.copyFrom.call(this, ctx);
};


function MethodContext(parser, ctx) {
	FeatureContext.call(this, parser);
    FeatureContext.prototype.copyFrom.call(this, ctx);
    return this;
}

MethodContext.prototype = Object.create(FeatureContext.prototype);
MethodContext.prototype.constructor = MethodContext;

COOLParser.MethodContext = MethodContext;

MethodContext.prototype.OBJECTID = function() {
    return this.getToken(COOLParser.OBJECTID, 0);
};

MethodContext.prototype.TYPEID = function() {
    return this.getToken(COOLParser.TYPEID, 0);
};

MethodContext.prototype.expression = function() {
    return this.getTypedRuleContext(ExpressionContext,0);
};

MethodContext.prototype.formal = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(FormalContext);
    } else {
        return this.getTypedRuleContext(FormalContext,i);
    }
};
MethodContext.prototype.enterRule = function(listener) {
    if(listener instanceof COOLListener ) {
        listener.enterMethod(this);
	}
};

MethodContext.prototype.exitRule = function(listener) {
    if(listener instanceof COOLListener ) {
        listener.exitMethod(this);
	}
};

MethodContext.prototype.accept = function(visitor) {
    if ( visitor instanceof COOLVisitor ) {
        return visitor.visitMethod(this);
    } else {
        return visitor.visitChildren(this);
    }
};


function ClassPropertyContext(parser, ctx) {
	FeatureContext.call(this, parser);
    FeatureContext.prototype.copyFrom.call(this, ctx);
    return this;
}

ClassPropertyContext.prototype = Object.create(FeatureContext.prototype);
ClassPropertyContext.prototype.constructor = ClassPropertyContext;

COOLParser.ClassPropertyContext = ClassPropertyContext;

ClassPropertyContext.prototype.OBJECTID = function() {
    return this.getToken(COOLParser.OBJECTID, 0);
};

ClassPropertyContext.prototype.TYPEID = function() {
    return this.getToken(COOLParser.TYPEID, 0);
};

ClassPropertyContext.prototype.ASSIGNMENT = function() {
    return this.getToken(COOLParser.ASSIGNMENT, 0);
};

ClassPropertyContext.prototype.expression = function() {
    return this.getTypedRuleContext(ExpressionContext,0);
};
ClassPropertyContext.prototype.enterRule = function(listener) {
    if(listener instanceof COOLListener ) {
        listener.enterClassProperty(this);
	}
};

ClassPropertyContext.prototype.exitRule = function(listener) {
    if(listener instanceof COOLListener ) {
        listener.exitClassProperty(this);
	}
};

ClassPropertyContext.prototype.accept = function(visitor) {
    if ( visitor instanceof COOLVisitor ) {
        return visitor.visitClassProperty(this);
    } else {
        return visitor.visitChildren(this);
    }
};



COOLParser.FeatureContext = FeatureContext;

COOLParser.prototype.feature = function() {

    var localctx = new FeatureContext(this, this._ctx, this.state);
    this.enterRule(localctx, 6, COOLParser.RULE_feature);
    var _la = 0; // Token type
    try {
        this.state = 67;
        this._errHandler.sync(this);
        var la_ = this._interp.adaptivePredict(this._input,6,this._ctx);
        switch(la_) {
        case 1:
            localctx = new MethodContext(this, localctx);
            this.enterOuterAlt(localctx, 1);
            this.state = 38;
            this.match(COOLParser.OBJECTID);
            this.state = 39;
            this.match(COOLParser.T__3);
            this.state = 50;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
            while(_la===COOLParser.OBJECTID) {
                this.state = 40;
                this.formal();
                this.state = 45;
                this._errHandler.sync(this);
                _la = this._input.LA(1);
                while(_la===COOLParser.T__4) {
                    this.state = 41;
                    this.match(COOLParser.T__4);
                    this.state = 42;
                    this.formal();
                    this.state = 47;
                    this._errHandler.sync(this);
                    _la = this._input.LA(1);
                }
                this.state = 52;
                this._errHandler.sync(this);
                _la = this._input.LA(1);
            }
            this.state = 53;
            this.match(COOLParser.T__5);
            this.state = 54;
            this.match(COOLParser.T__6);
            this.state = 55;
            this.match(COOLParser.TYPEID);
            this.state = 56;
            this.match(COOLParser.T__1);
            this.state = 57;
            this.expression(0);
            this.state = 58;
            this.match(COOLParser.T__2);
            break;

        case 2:
            localctx = new ClassPropertyContext(this, localctx);
            this.enterOuterAlt(localctx, 2);
            this.state = 60;
            this.match(COOLParser.OBJECTID);
            this.state = 61;
            this.match(COOLParser.T__6);
            this.state = 62;
            this.match(COOLParser.TYPEID);
            this.state = 65;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
            if(_la===COOLParser.ASSIGNMENT) {
                this.state = 63;
                this.match(COOLParser.ASSIGNMENT);
                this.state = 64;
                this.expression(0);
            }

            break;

        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function FormalContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = COOLParser.RULE_formal;
    return this;
}

FormalContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
FormalContext.prototype.constructor = FormalContext;

FormalContext.prototype.OBJECTID = function() {
    return this.getToken(COOLParser.OBJECTID, 0);
};

FormalContext.prototype.TYPEID = function() {
    return this.getToken(COOLParser.TYPEID, 0);
};

FormalContext.prototype.enterRule = function(listener) {
    if(listener instanceof COOLListener ) {
        listener.enterFormal(this);
	}
};

FormalContext.prototype.exitRule = function(listener) {
    if(listener instanceof COOLListener ) {
        listener.exitFormal(this);
	}
};

FormalContext.prototype.accept = function(visitor) {
    if ( visitor instanceof COOLVisitor ) {
        return visitor.visitFormal(this);
    } else {
        return visitor.visitChildren(this);
    }
};




COOLParser.FormalContext = FormalContext;

COOLParser.prototype.formal = function() {

    var localctx = new FormalContext(this, this._ctx, this.state);
    this.enterRule(localctx, 8, COOLParser.RULE_formal);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 69;
        this.match(COOLParser.OBJECTID);
        this.state = 70;
        this.match(COOLParser.T__6);
        this.state = 71;
        this.match(COOLParser.TYPEID);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function ExpressionContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = COOLParser.RULE_expression;
    return this;
}

ExpressionContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
ExpressionContext.prototype.constructor = ExpressionContext;


 
ExpressionContext.prototype.copyFrom = function(ctx) {
    antlr4.ParserRuleContext.prototype.copyFrom.call(this, ctx);
};

function LetInContext(parser, ctx) {
	ExpressionContext.call(this, parser);
    ExpressionContext.prototype.copyFrom.call(this, ctx);
    return this;
}

LetInContext.prototype = Object.create(ExpressionContext.prototype);
LetInContext.prototype.constructor = LetInContext;

COOLParser.LetInContext = LetInContext;

LetInContext.prototype.LET = function() {
    return this.getToken(COOLParser.LET, 0);
};

LetInContext.prototype.OBJECTID = function(i) {
	if(i===undefined) {
		i = null;
	}
    if(i===null) {
        return this.getTokens(COOLParser.OBJECTID);
    } else {
        return this.getToken(COOLParser.OBJECTID, i);
    }
};


LetInContext.prototype.TYPEID = function(i) {
	if(i===undefined) {
		i = null;
	}
    if(i===null) {
        return this.getTokens(COOLParser.TYPEID);
    } else {
        return this.getToken(COOLParser.TYPEID, i);
    }
};


LetInContext.prototype.IN = function() {
    return this.getToken(COOLParser.IN, 0);
};

LetInContext.prototype.expression = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(ExpressionContext);
    } else {
        return this.getTypedRuleContext(ExpressionContext,i);
    }
};

LetInContext.prototype.ASSIGNMENT = function(i) {
	if(i===undefined) {
		i = null;
	}
    if(i===null) {
        return this.getTokens(COOLParser.ASSIGNMENT);
    } else {
        return this.getToken(COOLParser.ASSIGNMENT, i);
    }
};

LetInContext.prototype.enterRule = function(listener) {
    if(listener instanceof COOLListener ) {
        listener.enterLetIn(this);
	}
};

LetInContext.prototype.exitRule = function(listener) {
    if(listener instanceof COOLListener ) {
        listener.exitLetIn(this);
	}
};

LetInContext.prototype.accept = function(visitor) {
    if ( visitor instanceof COOLVisitor ) {
        return visitor.visitLetIn(this);
    } else {
        return visitor.visitChildren(this);
    }
};


function MinusContext(parser, ctx) {
	ExpressionContext.call(this, parser);
    ExpressionContext.prototype.copyFrom.call(this, ctx);
    return this;
}

MinusContext.prototype = Object.create(ExpressionContext.prototype);
MinusContext.prototype.constructor = MinusContext;

COOLParser.MinusContext = MinusContext;

MinusContext.prototype.expression = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(ExpressionContext);
    } else {
        return this.getTypedRuleContext(ExpressionContext,i);
    }
};

MinusContext.prototype.MINUS = function() {
    return this.getToken(COOLParser.MINUS, 0);
};
MinusContext.prototype.enterRule = function(listener) {
    if(listener instanceof COOLListener ) {
        listener.enterMinus(this);
	}
};

MinusContext.prototype.exitRule = function(listener) {
    if(listener instanceof COOLListener ) {
        listener.exitMinus(this);
	}
};

MinusContext.prototype.accept = function(visitor) {
    if ( visitor instanceof COOLVisitor ) {
        return visitor.visitMinus(this);
    } else {
        return visitor.visitChildren(this);
    }
};


function StringContext(parser, ctx) {
	ExpressionContext.call(this, parser);
    ExpressionContext.prototype.copyFrom.call(this, ctx);
    return this;
}

StringContext.prototype = Object.create(ExpressionContext.prototype);
StringContext.prototype.constructor = StringContext;

COOLParser.StringContext = StringContext;

StringContext.prototype.STRING = function() {
    return this.getToken(COOLParser.STRING, 0);
};
StringContext.prototype.enterRule = function(listener) {
    if(listener instanceof COOLListener ) {
        listener.enterString(this);
	}
};

StringContext.prototype.exitRule = function(listener) {
    if(listener instanceof COOLListener ) {
        listener.exitString(this);
	}
};

StringContext.prototype.accept = function(visitor) {
    if ( visitor instanceof COOLVisitor ) {
        return visitor.visitString(this);
    } else {
        return visitor.visitChildren(this);
    }
};


function IsvoidContext(parser, ctx) {
	ExpressionContext.call(this, parser);
    ExpressionContext.prototype.copyFrom.call(this, ctx);
    return this;
}

IsvoidContext.prototype = Object.create(ExpressionContext.prototype);
IsvoidContext.prototype.constructor = IsvoidContext;

COOLParser.IsvoidContext = IsvoidContext;

IsvoidContext.prototype.ISVOID = function() {
    return this.getToken(COOLParser.ISVOID, 0);
};

IsvoidContext.prototype.expression = function() {
    return this.getTypedRuleContext(ExpressionContext,0);
};
IsvoidContext.prototype.enterRule = function(listener) {
    if(listener instanceof COOLListener ) {
        listener.enterIsvoid(this);
	}
};

IsvoidContext.prototype.exitRule = function(listener) {
    if(listener instanceof COOLListener ) {
        listener.exitIsvoid(this);
	}
};

IsvoidContext.prototype.accept = function(visitor) {
    if ( visitor instanceof COOLVisitor ) {
        return visitor.visitIsvoid(this);
    } else {
        return visitor.visitChildren(this);
    }
};


function WhileContext(parser, ctx) {
	ExpressionContext.call(this, parser);
    ExpressionContext.prototype.copyFrom.call(this, ctx);
    return this;
}

WhileContext.prototype = Object.create(ExpressionContext.prototype);
WhileContext.prototype.constructor = WhileContext;

COOLParser.WhileContext = WhileContext;

WhileContext.prototype.WHILE = function() {
    return this.getToken(COOLParser.WHILE, 0);
};

WhileContext.prototype.expression = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(ExpressionContext);
    } else {
        return this.getTypedRuleContext(ExpressionContext,i);
    }
};

WhileContext.prototype.LOOP = function() {
    return this.getToken(COOLParser.LOOP, 0);
};

WhileContext.prototype.POOL = function() {
    return this.getToken(COOLParser.POOL, 0);
};
WhileContext.prototype.enterRule = function(listener) {
    if(listener instanceof COOLListener ) {
        listener.enterWhile(this);
	}
};

WhileContext.prototype.exitRule = function(listener) {
    if(listener instanceof COOLListener ) {
        listener.exitWhile(this);
	}
};

WhileContext.prototype.accept = function(visitor) {
    if ( visitor instanceof COOLVisitor ) {
        return visitor.visitWhile(this);
    } else {
        return visitor.visitChildren(this);
    }
};


function DivisionContext(parser, ctx) {
	ExpressionContext.call(this, parser);
    ExpressionContext.prototype.copyFrom.call(this, ctx);
    return this;
}

DivisionContext.prototype = Object.create(ExpressionContext.prototype);
DivisionContext.prototype.constructor = DivisionContext;

COOLParser.DivisionContext = DivisionContext;

DivisionContext.prototype.expression = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(ExpressionContext);
    } else {
        return this.getTypedRuleContext(ExpressionContext,i);
    }
};

DivisionContext.prototype.DIVISION = function() {
    return this.getToken(COOLParser.DIVISION, 0);
};
DivisionContext.prototype.enterRule = function(listener) {
    if(listener instanceof COOLListener ) {
        listener.enterDivision(this);
	}
};

DivisionContext.prototype.exitRule = function(listener) {
    if(listener instanceof COOLListener ) {
        listener.exitDivision(this);
	}
};

DivisionContext.prototype.accept = function(visitor) {
    if ( visitor instanceof COOLVisitor ) {
        return visitor.visitDivision(this);
    } else {
        return visitor.visitChildren(this);
    }
};


function NegativeContext(parser, ctx) {
	ExpressionContext.call(this, parser);
    ExpressionContext.prototype.copyFrom.call(this, ctx);
    return this;
}

NegativeContext.prototype = Object.create(ExpressionContext.prototype);
NegativeContext.prototype.constructor = NegativeContext;

COOLParser.NegativeContext = NegativeContext;

NegativeContext.prototype.INTEGER_NEGATIVE = function() {
    return this.getToken(COOLParser.INTEGER_NEGATIVE, 0);
};

NegativeContext.prototype.expression = function() {
    return this.getTypedRuleContext(ExpressionContext,0);
};
NegativeContext.prototype.enterRule = function(listener) {
    if(listener instanceof COOLListener ) {
        listener.enterNegative(this);
	}
};

NegativeContext.prototype.exitRule = function(listener) {
    if(listener instanceof COOLListener ) {
        listener.exitNegative(this);
	}
};

NegativeContext.prototype.accept = function(visitor) {
    if ( visitor instanceof COOLVisitor ) {
        return visitor.visitNegative(this);
    } else {
        return visitor.visitChildren(this);
    }
};


